--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">网欣EAP</string>
+    <string name="app_name">手机EAP</string>
     <string name="login_need_help">登陆遇到困难?</string>
     <string name="fuck_error"></string>
     <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
